Update languages and add a Russian translation

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,40 +1,41 @@
 {
-  "address": "address",
+  "address": "adresse",
   "amount": "amount",
-  "baker": "baker",
-  "baker_address": "baker address",
-  "balance": "balance",
+  "baker": "bäcker",
+  "baker_address": "bäcker-adresse",
+  "balance": "guthaben",
   "beta": "beta",
   "briskett": "Briskett",
   "connect_trezor": "Verbinde Trezor",
   "connect_trezor_footnote": "Möglicherweise muss der Werbeblocker deaktiviert werden, damit Trezor Connect funktioniert.\nTapfere Benutzer, nimm Brave Shields ab.",
-  "connected": "connected",
-  "delegate": "delegate",
+  "connected": "verbunden",
+  "delegate": "delegieren",
   "delegation": "delegation",
-  "destination_address": "destination address",
-  "disconnected": "disconnected",
-  "donations": "donations",
-  "font_awesome_attribution": "Icons from Font Awesome",
+  "destination_address": "ziel-adresse",
+  "disconnected": "verbindung getrennt",
+  "donations": "spenden",
+  "font_awesome_attribution": "Icons von Font Awesome",
   "hash": "hash",
-  "last_operations": "Last Operation | Last {count} Operations",
+  "home": "home",
+  "last_operations": "Letzte Operation | Letzte {count} Operationen",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
   "offline": "offline",
   "online": "online",
   "receive": "erhalten",
-  "reveal": "reveal",
-  "reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
+  "reveal": "enthüllen",
+  "reveal_operation_details": "Dieser Vorgang zeigt Ihren öffentlichen Schlüssel für das Netzwerk an. Dies muss einmal pro Adresse durchgeführt werden und ist Voraussetzung für die Überprüfung der Betriebssignaturen im Netzwerk.",
   "send": "senden",
-  "slogan": "Die leckere Trezor Geldbörse.",
+  "slogan": "Die leckere Trezor geldbörse.",
   "status": "status",
   "time": "time",
-  "to": "to",
-  "trezor_is": "Trezor is",
+  "to": "an",
+  "trezor_is": "Trezor ist",
   "type": "type",
   "tzstats_api_status": "TzStats API Status",
-  "verify_address": "Verify Address",
-  "version": "version",
-  "why_cant_i_send_all_tezos": "Why can't I send ALL of my Tezos?",
-  "why_cant_i_send_all_tezos_answer": "As a way to protect the network from spam and malicious actors, Tezos\n\t\t\t\trequires a minimum balance in each wallet. Once opened, a wallet must\n\t\t\t\tcontain at least 0.275ꜩ.",
+  "verify_address": "Adresse Überprüfen",
+  "version": "ausführung",
+  "why_cant_i_send_all_tezos": "Warum kann ich nicht ALLE meine Tezos schicken?",
+  "why_cant_i_send_all_tezos_answer": "Um das netzwerk vor spam und böswilligen akteuren zu schützen, hat Tezos erfordert ein mindestguthaben in jeder brieftasche. Nach dem öffnen muss eine brieftasche enthalten mindestens 0,275ꜩ.",
   "why_delegate": "Why Delegate?",
   "why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
   "why_verify_my_address": "Why verify my address?",
