--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,35 +8,36 @@
   "briskett": "Briskett",
   "connect_trezor": "Connectez Trezor",
   "connect_trezor_footnote": "Il peut être nécessaire de désactiver le bloqueur de publicités pour que Trezor Connect fonctionne.\nCourageux utilisateurs, abattez Brave Shields.",
-  "connected": "connected",
-  "delegate": "delegate",
+  "connected": "connecté",
+  "delegate": "déléguer",
   "delegation": "delegation",
   "destination_address": "destination address",
-  "disconnected": "disconnected",
-  "donations": "donations",
+  "disconnected": "déconnecté",
+  "donations": "dons",
   "font_awesome_attribution": "Icons from Font Awesome",
   "hash": "hash",
-  "last_operations": "Last Operation | Last {count} Operations",
+  "home": "home",
+  "last_operations": "Dernière opération | Dernières {count} opérations",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
-  "offline": "offline",
-  "online": "online",
+  "offline": "hors ligne",
+  "online": "en ligne",
   "receive": "recevoir",
-  "reveal": "reveal",
-  "reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
+  "reveal": "révéler",
+  "reveal_operation_details": "Cette opération révèle votre clé publique sur le réseau. Cette opération doit être effectuée une fois par adresse et nécessite la vérification des signatures d'opérations sur le réseau.",
   "send": "envoyer",
   "slogan": "Le délicieux portefeuille Trezor.",
   "status": "status",
-  "time": "time",
-  "to": "to",
-  "trezor_is": "Trezor is",
+  "time": "temps",
+  "to": "à",
+  "trezor_is": "Trezor est",
   "type": "type",
   "tzstats_api_status": "TzStats API Status",
-  "verify_address": "Verify Address",
+  "verify_address": "Vérifier l’adresse",
   "version": "version",
-  "why_cant_i_send_all_tezos": "Why can't I send ALL of my Tezos?",
-  "why_cant_i_send_all_tezos_answer": "As a way to protect the network from spam and malicious actors, Tezos\n\t\t\t\trequires a minimum balance in each wallet. Once opened, a wallet must\n\t\t\t\tcontain at least 0.275ꜩ.",
-  "why_delegate": "Why Delegate?",
-  "why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
+  "why_cant_i_send_all_tezos": "Pourquoi ne puis-je pas envoyer TOUS mes Tezos?",
+  "why_cant_i_send_all_tezos_answer": "Pour protéger le réseau contre le spam et les acteurs malveillants, Tezos nécessite un solde minimum dans chaque portefeuille. Une fois ouvert, un portefeuille doit contiennent au moins 0,275ꜩ.",
+  "why_delegate": "Pourquoi Déléguer?",
+  "why_delegate_answer": "Comme Tezos est une crypto-monnaie inflationniste, il est sage de déléguer à\n un boulanger pour éviter d'être dilué par l'inflation.",
   "why_verify_my_address": "Why verify my address?",
   "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
   "will_my_coins_be_locked_up": "Will my coins be locked up?",
