--- a/locales/es.json
+++ b/locales/es.json
@@ -16,6 +16,7 @@
   "donations": "donaciones",
   "font_awesome_attribution": "Icons de Font Awesome",
   "hash": "hash",
+  "home": "inicio",
   "last_operations": "Última operación | Últimas {count} operaciones",
   "mainnet_giganode_status": "Estado de Mainnet Giga Node",
   "offline": "sin conexión",
