Add "Help Translate" button in footer
- Also add Portuguese and Slovak languages

--- a/locales/de.json
+++ b/locales/de.json
@@ -16,6 +16,7 @@
   "donations": "spenden",
   "font_awesome_attribution": "Icons von Font Awesome",
   "hash": "hash",
+  "help_translate": "Hilf mir zu übersetzen",
   "home": "home",
   "last_operations": "Letzte Operation | Letzte {count} Operationen",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
