--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -9,6 +9,7 @@
 	"version": "version",
 	"font_awesome_attribution": "Icons from Font Awesome",
 	"donations": "donations",
+	"help_translate": "Help me translate",
 	"online": "online",
 	"offline": "offline",
 	"connected": "connected",
