--- a/locales/fr.json
+++ b/locales/fr.json
@@ -16,6 +16,7 @@
   "donations": "dons",
   "font_awesome_attribution": "Icons from Font Awesome",
   "hash": "hash",
+  "help_translate": "Aidez-moi à traduire",
   "home": "home",
   "last_operations": "Dernière opération | Dernières {count} opérations",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
