--- a/locales/ru.json
+++ b/locales/ru.json
@@ -16,6 +16,7 @@
   "donations": "пожертвования",
   "font_awesome_attribution": "Значки из Font Awesome",
   "hash": "hash",
+  "help_translate": "Помогите мне перевести",
   "home": "home",
   "last_operations": "Последняя операция | Последние {count} операции",
   "mainnet_giganode_status": "Статус узла Mainnet Giga",
