--- a/locales/fr.json
+++ b/locales/fr.json
@@ -7,7 +7,7 @@
   "beta": "beta",
   "briskett": "Briskett",
   "connect_trezor": "Connectez Trezor",
-  "connect_trezor_footnote": "Il peut être nécessaire de désactiver le bloqueur de publicités pour que Trezor Connect fonctionne.\nCourageux utilisateurs, abattez Brave Shields.",
+  "connect_trezor_footnote": "Il peut être nécessaire de désactiver le bloqueur de publicités pour que Trezor Connect fonctionne.\nBrave utilisateurs, abattez Brave Shields.",
   "connected": "connecté",
   "delegate": "déléguer",
   "delegation": "delegation",
@@ -19,6 +19,7 @@
   "help_translate": "Aidez-moi à traduire",
   "home": "home",
   "last_operations": "Dernière opération | Dernières {count} opérations",
+  "main_description": "Une délicieuse interface porte-monnaie Tezos pour Trezor.",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
   "offline": "hors ligne",
   "online": "en ligne",
