--- a/locales/pt.json
+++ b/locales/pt.json
@@ -6,11 +6,11 @@
   "balance": "balance",
   "beta": "beta",
   "briskett": "Briskett",
-  "connect_trezor": "Connect Trezor",
-  "connect_trezor_footnote": "Might need to disable ad blocker in order for Trezor Connect to work.\nBrave users, take down Brave Shields.",
+  "connect_trezor": "Conecte Trezor",
+  "connect_trezor_footnote": "Talvez seja necessário desativar o bloqueador de anúncios para que o Trezor Connect funcione.\nUsuários de Brave, derrubar Brave Shields.",
   "connected": "connected",
-  "delegate": "delegate",
-  "delegation": "delegation",
+  "delegate": "delegar",
+  "delegation": "delegação",
   "destination_address": "destination address",
   "disconnected": "disconnected",
   "donations": "donations",
@@ -19,13 +19,14 @@
   "help_translate": "Ajude-me a traduzir",
   "home": "home",
   "last_operations": "Last Operation | Last {count} Operations",
+  "main_description": "Uma deliciosa interface de carteira Tezos para Trezor.",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
   "offline": "offline",
   "online": "online",
-  "receive": "receive",
-  "reveal": "reveal",
-  "reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
-  "send": "send",
+  "receive": "receber",
+  "reveal": "revelar",
+  "reveal_operation_details": "Esta operação revela sua chave pública para a rede. Ele precisa ser feito uma vez por endereço e é um requisito para verificar assinaturas de operação na rede.",
+  "send": "enviar",
   "slogan": "The delicious Trezor wallet.",
   "status": "status",
   "time": "time",
