--- a/locales/sk.json
+++ b/locales/sk.json
@@ -6,10 +6,10 @@
   "balance": "balance",
   "beta": "beta",
   "briskett": "Briskett",
-  "connect_trezor": "Connect Trezor",
-  "connect_trezor_footnote": "Might need to disable ad blocker in order for Trezor Connect to work.\nBrave users, take down Brave Shields.",
+  "connect_trezor": "Pripojiť Trezor",
+  "connect_trezor_footnote": "Možno bude potrebné zakázať blokovanie reklám, aby Trezor Connect fungoval.\nBrave užívatelia, zložiť Brave Shields.",
   "connected": "connected",
-  "delegate": "delegate",
+  "delegate": "Delegát",
   "delegation": "delegation",
   "destination_address": "destination address",
   "disconnected": "disconnected",
@@ -19,14 +19,15 @@
   "help_translate": "Pomôž mi preložiť",
   "home": "home",
   "last_operations": "Last Operation | Last {count} Operations",
+  "main_description": "Chutné rozhranie peňaženky Tezos pre Trezor.",
   "mainnet_giganode_status": "Mainnet Giga Node Status",
   "offline": "offline",
   "online": "online",
-  "receive": "receive",
+  "receive": "Prijať",
   "reveal": "reveal",
   "reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
-  "send": "send",
-  "slogan": "The delicious Trezor wallet.",
+  "send": "Odoslať",
+  "slogan": "Chutná peňaženka Trezor.",
   "status": "status",
   "time": "time",
   "to": "to",
