Add attribution for logo

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -9,6 +9,7 @@
 	"tzstats_api_status": "TzStats API Status",
 	"version": "version",
 	"font_awesome_attribution": "Icons from Font Awesome",
+	"logo_attribution": "Logo by Sameer Rizvi",
 	"donations": "donations",
 	"help_translate": "Help me translate",
 	"online": "online",
