--- a/locales/ru.json
+++ b/locales/ru.json
@@ -15,10 +15,11 @@
   "disconnected": "разъединен",
   "donations": "пожертвования",
   "font_awesome_attribution": "Значки из Font Awesome",
-  "hash": "hash",
+  "hash": "хеш",
   "help_translate": "Помогите мне перевести",
-  "home": "home",
+  "home": "главная",
   "last_operations": "Последняя операция | Последние {count} операции",
+  "logo_attribution": "Логотип сделал Sameer Rizvi",
   "main_description": "Вкусный интерфейс кошелька Tezos для Trezor.",
   "mainnet_giganode_status": "Статус узла Mainnet Giga",
   "offline": "офлайн",
@@ -28,11 +29,11 @@
   "reveal_operation_details": "Эта операция раскрывает ваш открытый ключ в сети. Это необходимо сделать один раз для каждого адреса, что является обязательным условием для проверки подписей операций в сети.",
   "send": "отправить",
   "slogan": "Вкусный кошелек Trezor.",
-  "status": "status",
-  "time": "time",
+  "status": "статус",
+  "time": "время",
   "to": "на",
   "trezor_is": "Trezor",
-  "type": "type",
+  "type": "тип",
   "tzstats_api_status": "Статус TzStats API",
   "verify_address": "Подтвердить Адрес",
   "version": "версия",
@@ -40,8 +41,8 @@
   "why_cant_i_send_all_tezos_answer": "Как способ защитить сеть от спама и злоумышленников, Tezos\n требуется минимальный остаток в каждом кошельке. После открытия кошелек должен\n содержат не менее 0,275ꜩ.",
   "why_delegate": "Зачем делегировать?",
   "why_delegate_answer": "Поскольку Tezos является инфляционной криптовалютой, целесообразно делегировать\n пекарь, чтобы избежать разбавления инфляцией.",
-  "why_verify_my_address": "Why verify my address?",
-  "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
-  "will_my_coins_be_locked_up": "Will my coins be locked up?",
-  "will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active."
+  "why_verify_my_address": "Зачем проверять мой адрес?",
+  "why_verify_my_address_answer": "Хотя шансы малы, в случае если злоумышленник получит доступ к\n на этой странице (например, через вредоносное расширение для браузера) они могут поменять\n ваш адрес для своих собственных. Это приведет к тому, что они получают монеты\n которые вот-вот будут отправлены, а НЕ ВЫ! Пожалуйста, практикуйте надлежащее обеспечение безопасности\n проверяя свой адрес, особенно при отправке очень больших сумм.",
+  "will_my_coins_be_locked_up": "Монеты будут заперты?",
+  "will_my_coins_be_locked_up_answer": "Нет. В отличие от других криптовалют, Tezos внедряет Liquid\n Прооф-оф-стейк. Вы можете перемещать свои средства даже во время делегирования\n пекарь активна."
 }
