--- a/locales/sk.json
+++ b/locales/sk.json
@@ -1,47 +1,48 @@
 {
-  "address": "address",
-  "amount": "amount",
-  "baker": "baker",
-  "baker_address": "baker address",
-  "balance": "balance",
+  "address": "adresa",
+  "amount": "množstvo",
+  "baker": "pekár",
+  "baker_address": "adresa pekára",
+  "balance": "zostatok",
   "beta": "beta",
   "briskett": "Briskett",
   "connect_trezor": "Pripojiť Trezor",
   "connect_trezor_footnote": "Možno bude potrebné zakázať blokovanie reklám, aby Trezor Connect fungoval.\nBrave užívatelia, zložiť Brave Shields.",
-  "connected": "connected",
+  "connected": "pripojené",
   "delegate": "Delegát",
-  "delegation": "delegation",
-  "destination_address": "destination address",
-  "disconnected": "disconnected",
-  "donations": "donations",
-  "font_awesome_attribution": "Icons from Font Awesome",
-  "hash": "hash",
+  "delegation": "delegácia",
+  "destination_address": "cieľová adresa",
+  "disconnected": "odpojené",
+  "donations": "dary",
+  "font_awesome_attribution": "Ikony z Font Awesome",
+  "hash": "hašovacia",
   "help_translate": "Pomôž mi preložiť",
-  "home": "home",
-  "last_operations": "Last Operation | Last {count} Operations",
+  "home": "domov",
+  "last_operations": "Posledná operácia | Posledné {count} Operácie",
+  "logo_attribution": "Obrázok vytvoril Sameer Rizvi",
   "main_description": "Chutné rozhranie peňaženky Tezos pre Trezor.",
-  "mainnet_giganode_status": "Mainnet Giga Node Status",
-  "offline": "offline",
-  "online": "online",
+  "mainnet_giganode_status": "Stav Uzla Mainnet Giga",
+  "offline": "odpojené",
+  "online": "pripojené",
   "receive": "Prijať",
-  "reveal": "reveal",
-  "reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
+  "reveal": "odhaliť",
+  "reveal_operation_details": "Táto operácia odhalí váš verejný kľúč k sieti. Musí sa vykonať raz na adresu a je požiadavkou na overenie podpisov prevádzky v sieti.",
   "send": "Odoslať",
   "slogan": "Chutná peňaženka Trezor.",
-  "status": "status",
-  "time": "time",
-  "to": "to",
-  "trezor_is": "Trezor is",
-  "type": "type",
-  "tzstats_api_status": "TzStats API Status",
-  "verify_address": "Verify Address",
-  "version": "version",
-  "why_cant_i_send_all_tezos": "Why can't I send ALL of my Tezos?",
-  "why_cant_i_send_all_tezos_answer": "As a way to protect the network from spam and malicious actors, Tezos\n\t\t\t\trequires a minimum balance in each wallet. Once opened, a wallet must\n\t\t\t\tcontain at least 0.275ꜩ.",
-  "why_delegate": "Why Delegate?",
-  "why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
-  "why_verify_my_address": "Why verify my address?",
-  "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
-  "will_my_coins_be_locked_up": "Will my coins be locked up?",
-  "will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active."
+  "status": "stav",
+  "time": "čas",
+  "to": "komu",
+  "trezor_is": "Trezor je",
+  "type": "druh",
+  "tzstats_api_status": "Stav API TzStats",
+  "verify_address": "Overiť Adresu",
+  "version": "verzia",
+  "why_cant_i_send_all_tezos": "Prečo nemôžem poslať všetky svoje Tezos?",
+  "why_cant_i_send_all_tezos_answer": "Ako spôsob, ako chrániť sieť pred spamom a škodlivými aktérmi, Tezos\n vyžaduje minimálnu rovnováhu v každej peňaženke. Po otvorení musí peňaženka\n obsahujú aspoň 0,275ꜩ.",
+  "why_delegate": "Prečo delegát?",
+  "why_delegate_answer": "Vzhľadom k tomu, Tezos je inflačná kryptomena je múdre delegovať\n pekár, aby sa zabránilo riedenie infláciou.",
+  "why_verify_my_address": "Prečo overiť moju adresu?",
+  "why_verify_my_address_answer": "Hoci šance sú štíhle, v prípade, že útočník získa prístup\n túto stránku (napríklad prostredníctvom škodlivého rozšírenia prehliadača) by mohli vymeniť\n svoju adresu pre svoje vlastné. To by viedlo k tomu, aby sa mince\n ktoré sa chystajú byť odoslané von a nie vy! Prosím, prax dobrú bezpečnosť\n overením vašej adresy, najmä pri odosielaní veľmi veľkých množstiev.",
+  "will_my_coins_be_locked_up": "Budú moje mince zamknuté?",
+  "will_my_coins_be_locked_up_answer": "Nie. Na rozdiel od iných kryptomen, Tezos implementuje Liquid\n dôkazom o stávke. Máte možnosť presunúť svoje finančné prostriedky, aj keď delegovanie\n pekár je aktívny."
 }
