--- a/locales/de.json
+++ b/locales/de.json
@@ -1,6 +1,6 @@
 {
   "address": "adresse",
-  "amount": "amount",
+  "amount": "menge",
   "baker": "bäcker",
   "baker_address": "bäcker-adresse",
   "balance": "guthaben",
@@ -17,31 +17,32 @@
   "font_awesome_attribution": "Icons von Font Awesome",
   "hash": "hash",
   "help_translate": "Hilf mir zu übersetzen",
-  "home": "home",
+  "home": "startseite",
   "last_operations": "Letzte Operation | Letzte {count} Operationen",
+  "logo_attribution": "Logo von Sameer Rizvi",
   "main_description": "Ein leckeres Tezos geldbörse-interface für Trezor.",
-  "mainnet_giganode_status": "Mainnet Giga Node Status",
-  "offline": "offline",
-  "online": "online",
+  "mainnet_giganode_status": "Mainnet Giga Netzwerk Zustand",
+  "offline": "getrennt",
+  "online": "verbunden",
   "receive": "erhalten",
   "reveal": "enthüllen",
   "reveal_operation_details": "Dieser Vorgang zeigt Ihren öffentlichen Schlüssel für das Netzwerk an. Dies muss einmal pro Adresse durchgeführt werden und ist Voraussetzung für die Überprüfung der Betriebssignaturen im Netzwerk.",
   "send": "senden",
   "slogan": "Die leckere Trezor geldbörse.",
-  "status": "status",
-  "time": "time",
+  "status": "zustand",
+  "time": "zeit",
   "to": "an",
   "trezor_is": "Trezor ist",
-  "type": "type",
-  "tzstats_api_status": "TzStats API Status",
+  "type": "nett",
+  "tzstats_api_status": "TZStats API Zustand",
   "verify_address": "Adresse Überprüfen",
   "version": "ausführung",
   "why_cant_i_send_all_tezos": "Warum kann ich nicht ALLE meine Tezos schicken?",
   "why_cant_i_send_all_tezos_answer": "Um das netzwerk vor spam und böswilligen akteuren zu schützen, hat Tezos erfordert ein mindestguthaben in jeder brieftasche. Nach dem öffnen muss eine brieftasche enthalten mindestens 0,275ꜩ.",
-  "why_delegate": "Why Delegate?",
-  "why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
-  "why_verify_my_address": "Why verify my address?",
-  "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
-  "will_my_coins_be_locked_up": "Will my coins be locked up?",
-  "will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active."
+  "why_delegate": "Warum Delegierter?",
+  "why_delegate_answer": "Da Tezos eine inflationäre Kryptowährung ist, ist es ratsam, an zu delegieren\n ein Bäcker, um nicht durch Inflation verdünnt zu werden.",
+  "why_verify_my_address": "Warum meine adresse verifizieren?",
+  "why_verify_my_address_answer": "Obwohl die Chancen gering sind, für den Fall, dass ein Angreifer Zugang zu erhält\n diese Seite (wie über eine bösartige Browsererweiterung) könnten sie austauschen\n Ihre Adresse für ihre eigene. Dies würde dazu führen, dass sie die Münzen bekommen\n die bald ausgesandt werden und NICHT DU! Bitte üben Sie gute Sicherheit\n indem Sie Ihre Adresse überprüfen, insbesondere wenn Sie sehr große Beträge senden.",
+  "will_my_coins_be_locked_up": "Werden meine münze gesperrt?",
+  "will_my_coins_be_locked_up_answer": "Nein. Im Gegensatz zu anderen Kryptowährungen implementiert Tezos Liquid\n Nachweis des Einsatzes. Es steht Ihnen frei, Ihr Geld auch während der Delegierung an\n ein Bäcker ist aktiv."
 }
