--- a/locales/fr.json
+++ b/locales/fr.json
@@ -4,23 +4,24 @@
   "baker": "boulanger",
   "baker_address": "adresse de boulanger",
   "balance": "solde",
-  "beta": "beta",
+  "beta": "bêta",
   "briskett": "Briskett",
   "connect_trezor": "Connectez Trezor",
   "connect_trezor_footnote": "Il peut être nécessaire de désactiver le bloqueur de publicités pour que Trezor Connect fonctionne.\nBrave utilisateurs, abattez Brave Shields.",
   "connected": "connecté",
   "delegate": "déléguer",
-  "delegation": "delegation",
-  "destination_address": "destination address",
+  "delegation": "délégation",
+  "destination_address": "adresse de destination",
   "disconnected": "déconnecté",
   "donations": "dons",
-  "font_awesome_attribution": "Icons from Font Awesome",
-  "hash": "hash",
+  "font_awesome_attribution": "Icônes de Font Awesome",
+  "hash": "hachage",
   "help_translate": "Aidez-moi à traduire",
-  "home": "home",
+  "home": "domicile",
   "last_operations": "Dernière opération | Dernières {count} opérations",
+  "logo_attribution": "Logo réalisé par Sameer Rizvi",
   "main_description": "Une délicieuse interface porte-monnaie Tezos pour Trezor.",
-  "mainnet_giganode_status": "Mainnet Giga Node Status",
+  "mainnet_giganode_status": "État du Nœud Giga Principal",
   "offline": "hors ligne",
   "online": "en ligne",
   "receive": "recevoir",
@@ -28,20 +29,20 @@
   "reveal_operation_details": "Cette opération révèle votre clé publique sur le réseau. Cette opération doit être effectuée une fois par adresse et nécessite la vérification des signatures d'opérations sur le réseau.",
   "send": "envoyer",
   "slogan": "Le délicieux portefeuille Trezor.",
-  "status": "status",
+  "status": "statut",
   "time": "temps",
   "to": "à",
   "trezor_is": "Trezor est",
-  "type": "type",
-  "tzstats_api_status": "TzStats API Status",
+  "type": "genre",
+  "tzstats_api_status": "État de l'API TzStats",
   "verify_address": "Vérifier l’adresse",
   "version": "version",
   "why_cant_i_send_all_tezos": "Pourquoi ne puis-je pas envoyer TOUS mes Tezos?",
   "why_cant_i_send_all_tezos_answer": "Pour protéger le réseau contre le spam et les acteurs malveillants, Tezos nécessite un solde minimum dans chaque portefeuille. Une fois ouvert, un portefeuille doit contiennent au moins 0,275ꜩ.",
   "why_delegate": "Pourquoi Déléguer?",
   "why_delegate_answer": "Comme Tezos est une crypto-monnaie inflationniste, il est sage de déléguer à\n un boulanger pour éviter d'être dilué par l'inflation.",
-  "why_verify_my_address": "Why verify my address?",
-  "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
-  "will_my_coins_be_locked_up": "Will my coins be locked up?",
-  "will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active."
+  "why_verify_my_address": "Pourquoi vérifier mon adresse?",
+  "why_verify_my_address_answer": "Bien que les chances soient minces, dans le cas où un attaquant aura accès à\n cette page (comme via une extension de navigateur malveillante), ils pourraient changer\n votre adresse pour leur propre adresse. Cela leur conduirait à obtenir les pièces.\n qui sont sur le point d'être envoyés et PAS VOUS ! Pratiquez une bonne sécurité\n en vérifiant votre adresse, en particulier lors de l'envoi de très gros montants.",
+  "will_my_coins_be_locked_up": "Mes pièces seront-elles verrouillées?",
+  "will_my_coins_be_locked_up_answer": "Non. Contrairement à d'autres cryptomonnaies, Tezos implémente Liquid\n preuve de mise. Vous êtes libre de transférer vos fonds même en cas de délégation à\n un boulanger est actif."
 }
