--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,48 +1,48 @@
 {
   "address": "endereço",
-  "amount": "amount",
-  "baker": "baker",
-  "baker_address": "baker address",
-  "balance": "balance",
+  "amount": "quantidade",
+  "baker": "padeiro",
+  "baker_address": "endereço padeiro",
+  "balance": "saldo",
   "beta": "beta",
   "briskett": "Briskett",
   "connect_trezor": "Conecte Trezor",
   "connect_trezor_footnote": "Talvez seja necessário desativar o bloqueador de anúncios para que o Trezor Connect funcione.\nUsuários de Brave, derrubar Brave Shields.",
-  "connected": "connected",
+  "connected": "conectado",
   "delegate": "delegar",
   "delegation": "delegação",
-  "destination_address": "destination address",
-  "disconnected": "disconnected",
-  "donations": "donations",
-  "font_awesome_attribution": "Icons from Font Awesome",
+  "destination_address": "endereço de destino",
+  "disconnected": "desconectado",
+  "donations": "donativos",
+  "font_awesome_attribution": "Ícones de Font Awesome",
   "hash": "hash",
   "help_translate": "Ajude-me a traduzir",
-  "home": "home",
-  "last_operations": "Last Operation | Last {count} Operations",
-  "logo_attribution": "Logo by Sameer Rizvi",
+  "home": "início",
+  "last_operations": "Última operação | Últimas {count} Operações",
+  "logo_attribution": "Logotipo feita por Sameer Rizvi",
   "main_description": "Uma deliciosa interface de carteira Tezos para Trezor.",
   "mainnet_giganode_status": "Status do Nó Mainnet Giga",
-  "offline": "offline",
-  "online": "online",
+  "offline": "desconectado",
+  "online": "conectado",
   "receive": "receber",
   "reveal": "revelar",
   "reveal_operation_details": "Esta operação revela sua chave pública para a rede. Ele precisa ser feito uma vez por endereço e é um requisito para verificar assinaturas de operação na rede.",
   "send": "enviar",
-  "slogan": "The delicious Trezor wallet.",
-  "status": "status",
-  "time": "time",
-  "to": "to",
-  "trezor_is": "Trezor is",
-  "type": "type",
-  "tzstats_api_status": "TzStats API Status",
-  "verify_address": "Verify Address",
-  "version": "version",
-  "why_cant_i_send_all_tezos": "Why can't I send ALL of my Tezos?",
-  "why_cant_i_send_all_tezos_answer": "As a way to protect the network from spam and malicious actors, Tezos\n\t\t\t\trequires a minimum balance in each wallet. Once opened, a wallet must\n\t\t\t\tcontain at least 0.275ꜩ.",
-  "why_delegate": "Why Delegate?",
-  "why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
-  "why_verify_my_address": "Why verify my address?",
-  "why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
-  "will_my_coins_be_locked_up": "Will my coins be locked up?",
-  "will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active."
+  "slogan": "A deliciosa carteira para Trezor.",
+  "status": "estado",
+  "time": "tempo",
+  "to": "para",
+  "trezor_is": "Trezor é",
+  "type": "tipo",
+  "tzstats_api_status": "Status da API TzStats",
+  "verify_address": "Verificar Endereço",
+  "version": "versão",
+  "why_cant_i_send_all_tezos": "Por que não posso enviar TODOS os meus Tezos?",
+  "why_cant_i_send_all_tezos_answer": "Como forma de proteger a rede contra spam e atores maliciosos, Tezos\n requer um saldo mínimo em cada carteira. Uma vez aberta, uma carteira deve\n contém pelo menos 0,275ꜩ.",
+  "why_delegate": "Por que delegar?",
+  "why_delegate_answer": "Como Tezos é uma criptomoeda inflacionária, é aconselhável delegar para\n um padeiro para evitar ser diluído pela inflação.",
+  "why_verify_my_address": "Por que verificar meu endereço?",
+  "why_verify_my_address_answer": "Embora as chances sejam pequenas, no caso de um atacante ganhar acesso a\n esta página (como por meio de uma extensão de navegador maliciosa) eles poderiam trocar\n seu endereço por conta própria. Isso levaria a que eles recebessem as moedas\n que estão prestes a ser enviadas e NÃO VOCÊ! Pratique boa segurança\n verificando seu endereço, especialmente ao enviar quantias muito grandes.",
+  "will_my_coins_be_locked_up": "Minhas moedas serão trancadas?",
+  "will_my_coins_be_locked_up_answer": "Não. Ao contrário de outras criptomoedas, a Tezos implementa Liquida\n Prova de Participação. Você é livre para mover seus fundos mesmo enquanto delegação para\n um padeiro está ativo."
 }
