Add translations for the new ECAD Labs node status
- Also change key name to rpc_node_status as I imagine these might
change over time again

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -27,6 +27,7 @@
   "receive": "получить",
   "reveal": "раскрытие",
   "reveal_operation_details": "Эта операция раскрывает ваш открытый ключ в сети. Это необходимо сделать один раз для каждого адреса, что является обязательным условием для проверки подписей операций в сети.",
+  "rpc_node_status": "Статус узла лаборатории ECAD",
   "send": "отправить",
   "slogan": "Вкусный кошелек Trezor.",
   "status": "статус",
