--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -25,6 +25,7 @@
 	"delegate": "delegate",
 	"delegation": "delegation",
 	"receive": "receive",
+	"reward": "reward",
 	"reveal": "reveal",
 	"to": "to",
 	"destination_address": "destination address",
