--- a/locales/fr.json
+++ b/locales/fr.json
@@ -27,6 +27,7 @@
   "receive": "recevoir",
   "reveal": "révéler",
   "reveal_operation_details": "Cette opération révèle votre clé publique sur le réseau. Cette opération doit être effectuée une fois par adresse et nécessite la vérification des signatures d'opérations sur le réseau.",
+  "reward": "récompense",
   "rpc_node_status": "État du nœud ECAD Labs",
   "send": "envoyer",
   "slogan": "Le délicieux portefeuille Trezor.",
