Tentative fix for #17

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -23,6 +23,7 @@
 	"home": "home",
 	"send": "send",
 	"delegate": "delegate",
+	"undelegate": "undelegate",
 	"delegation": "delegation",
 	"receive": "receive",
 	"reward": "reward",
