--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -23,6 +23,7 @@
 	"home": "home",
 	"send": "send",
 	"delegate": "delegate",
+	"undelegate": "undelegate",
 	"delegation": "delegation",
 	"receive": "receive",
 	"reward": "reward",
@@ -42,6 +43,8 @@
 	"why_delegate_answer": "Since Tezos is an inflationary cryptocurrency it is wise to delegate to\n\t\t\t\ta baker to avoid being diluted by inflation.",
 	"will_my_coins_be_locked_up": "Will my coins be locked up?",
 	"will_my_coins_be_locked_up_answer": "No. Unlike other cryptocurrencies, Tezos implements Liquid\n\t\t\t\tProof-of-Stake. You are free to move your funds even while delegation to\n\t\t\t\ta baker is active.",
+	"why_undelegate": "Why Undelegate?",
+	"why_undelegate_answer": "Since some jurisdictions tax crypto rewards as income, it can be beneficial to undelegate to avoid creating taxable events.",
 	"why_verify_my_address": "Why verify my address?",
 	"why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
 	"reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network."
