Change copy to reflect the new TZ Foundation RPC node that's being used

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -28,7 +28,7 @@
   "reveal": "desvelar",
   "reveal_operation_details": "Esta operación revela la clave pública de la red. Debe realizarse una vez por dirección y es un requisito para verificar las firmas de operaciones en la red.",
   "reward": "recompensa",
-  "rpc_node_status": "Estado del nodo de ECAD Labs",
+  "rpc_node_status": "Estado del nodo de Tezos Foundation",
   "send": "enviar",
   "slogan": "La deliciosa cartera para Trezor.",
   "status": "estatus",
