--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -28,7 +28,7 @@
   "reveal": "раскрытие",
   "reveal_operation_details": "Эта операция раскрывает ваш открытый ключ в сети. Это необходимо сделать один раз для каждого адреса, что является обязательным условием для проверки подписей операций в сети.",
   "reward": "вознаграждение",
-  "rpc_node_status": "Статус узла лаборатории ECAD",
+  "rpc_node_status": "Статус узла лаборатории Tezos Foundation",
   "send": "отправить",
   "slogan": "Вкусный кошелек Trezor.",
   "status": "статус",
