--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -28,7 +28,7 @@
   "reveal": "odhaliť",
   "reveal_operation_details": "Táto operácia odhalí váš verejný kľúč k sieti. Musí sa vykonať raz na adresu a je požiadavkou na overenie podpisov prevádzky v sieti.",
   "reward": "odmena",
-  "rpc_node_status": "Stav uzla laboratórií ECAD",
+  "rpc_node_status": "Stav uzla laboratórií Tezos Foundation",
   "send": "Odoslať",
   "slogan": "Chutná peňaženka Trezor.",
   "status": "stav",
