Update verbiage to Briskett Node Status

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -28,7 +28,7 @@
   "reveal": "enthüllen",
   "reveal_operation_details": "Dieser Vorgang zeigt Ihren öffentlichen Schlüssel für das Netzwerk an. Dies muss einmal pro Adresse durchgeführt werden und ist Voraussetzung für die Überprüfung der Betriebssignaturen im Netzwerk.",
   "reward": "belohnung",
-  "rpc_node_status": "Tezos Foundation Knotenstatus",
+  "rpc_node_status": "Briskett Knotenstatus",
   "send": "senden",
   "slogan": "Die leckere Trezor geldbörse.",
   "status": "zustand",
