Update TX log to use the TzKT API
- Also add attribution

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,8 @@
 	"connect_trezor": "Connect Trezor",
 	"connect_trezor_footnote": "Might need to disable ad blocker in order for Trezor Connect to work.\nBrave users, take down Brave Shields.",
 	"rpc_node_status": "Briskett Node Status",
-	"tzstats_api_status": "TzStats API Status",
+	"tzstats_api_status": "TzKT API Status",
+	"tx_log_api_attribution": "Powered by TzKT API",
 	"version": "version",
 	"font_awesome_attribution": "Icons from Font Awesome",
 	"logo_attribution": "Logo by Sameer Rizvi",
@@ -50,7 +51,7 @@
 	"why_verify_my_address_answer": "Although the chances are slim, in the event an attacker gains access to\n\t\t\t\tthis page (like via a malicious browser extension) they could swap out\n\t\t\t\tyour address for their own. This would lead to them getting the coins\n\t\t\t\tthat are about to be sent out and NOT YOU! Please practice good security\n\t\t\t\tby verifying your address, especially when sending very large amounts.",
 	"reveal_operation_details": "This operation reveals your public key to the network. It needs to be done once per address, and is a requirement for verifying operation signatures on the network.",
 	"language": "Language",
-	"tzpro_api_key": "TzStats/TzPro API Key",
+	"tzpro_api_key": "TzKT API Key",
 	"tzpro_api_key_click_to_add_own_key": "Click here to add your own key",
 	"tzpro_api_key_help": "Instructions are available at",
 	"save_and_refresh": "Save & Refresh",
